--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.10",
-    "@tailwindcss/vite": "^4.0.13",
-    "axios": "^1.8.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1"
-  },
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@material-tailwind/react": "^2.1.10",
+  "@tailwindcss/vite": "^4.0.13",
+  "axios": "^1.8.4",
+  "react-icons": "^5.5.0",
+  "react-router-dom": "^7.5.1"
+},
+"overrides": {
+  "react": "18.2.0",
+  "react-dom":"18.2.0"
+},
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
