--- a/package.json
+++ b/package.json
@@ -10,18 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
-    "@material-tailwind/react": "^2.1.10",
-    "axios": "^1.8.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.8.4",
-
+    "lucide-react": "^0.501.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1"
   },
@@ -44,4 +38,3 @@
     "vite": "^6.2.0"
   }
 }
-
